// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pagination events work correctly: table row 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  d8eb71c1-085d-4667-8fe1-b64ad1c6dd77
</td>
`;

exports[`pagination events work correctly: table row 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  12/30/2021
</td>
`;

exports[`pagination events work correctly: table row 1 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`pagination events work correctly: table row 1 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/quest-form/d8eb71c1-085d-4667-8fe1-b64ad1c6dd77/QuestionnaireResponse"
  >
    Edit
  </a>
</td>
`;

exports[`pagination events work correctly: table row 1 page 2 1`] = `
<td
  class="ant-table-cell"
>
  8d8d0c07-c2bf-4e5a-9cb3-6c264c3e58dd
</td>
`;

exports[`pagination events work correctly: table row 1 page 2 2`] = `
<td
  class="ant-table-cell"
>
  12/30/2021
</td>
`;

exports[`pagination events work correctly: table row 1 page 2 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`pagination events work correctly: table row 1 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/quest-form/8d8d0c07-c2bf-4e5a-9cb3-6c264c3e58dd/QuestionnaireResponse"
  >
    Edit
  </a>
</td>
`;

exports[`pagination events work correctly: table row 2 page 1 1`] = `
<td
  class="ant-table-cell"
>
  f93a4e65-d823-468c-842f-fd5a1509f231
</td>
`;

exports[`pagination events work correctly: table row 2 page 1 2`] = `
<td
  class="ant-table-cell"
>
  12/30/2021
</td>
`;

exports[`pagination events work correctly: table row 2 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`pagination events work correctly: table row 2 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/quest-form/f93a4e65-d823-468c-842f-fd5a1509f231/QuestionnaireResponse"
  >
    Edit
  </a>
</td>
`;

exports[`pagination events work correctly: table row 2 page 2 1`] = `
<td
  class="ant-table-cell"
>
  f8315582-38f9-4733-a932-2d2348a6af82
</td>
`;

exports[`pagination events work correctly: table row 2 page 2 2`] = `
<td
  class="ant-table-cell"
>
  12/29/2021
</td>
`;

exports[`pagination events work correctly: table row 2 page 2 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`pagination events work correctly: table row 2 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/quest-form/f8315582-38f9-4733-a932-2d2348a6af82/QuestionnaireResponse"
  >
    Edit
  </a>
</td>
`;